--- a/src/containers/Booking/modal/makeBookingModal.scss
+++ b/src/containers/Booking/modal/makeBookingModal.scss
@@ -1,76 +1,175 @@
+@import "../../../styles/mixins";
 .modal {
-    display: block; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
-  }
-  .modal-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    & h2 {
-      font-size: 25px;
-      font-weight: bold;
-
-    }
-  }
-
-  .modal-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 50px;
-  }
-
-  .modal-footer {
-    padding-top: 50px;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    & h2 {
-      font-weight: bold;
-    }
-    &-btn {
-      display: flex;
-      align-items: flex-end;
-      flex-direction: column;
-      & button{
-        background-color: #375E97;
-        color: white;
-        padding: 10px 50px;
-        border-radius: 10px;
-      }
-      & p {
-        color: #C7C7C7;
-      }
-    }
-  }
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; 
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; 
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  & h2 {
+    font-size: 25px;
     font-weight: bold;
   }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+}
+.form-contacts {
+  padding-top: 20px;
+  & .mb-3 {
+    border: 1px solid #919191;
+    padding: 10px 20px;
+    border-radius: 10px;
   }
+  & .form-label {
+    color: #909090;
+    font-weight: 400;
+  }
+}
+
+.flex-module {
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  @include _500 {
+    flex-direction: column;
+  }
+  & div {
+    width: 80%;
+    & .form-label {
+      color: #909090;
+      font-weight: 400;
+    }
+    @include _500 {
+      width: 100%;
+    }
+  }
+  & .mb-3 {
+    border: 1px solid #919191;
+    padding: 10px 20px;
+    border-radius: 10px;
+  }
+}
+
+.modal-body {
+  display: flex;
+  padding-top: 10px;
+  & form {
+    width: 100%;
+  }
+}
+
+.modal-footer {
+  padding-top: 50px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  & h2 {
+    font-weight: bold;
+  }
+  &-btn {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    & button {
+      background-color: #375e97;
+      color: white;
+      padding: 10px 50px;
+      border-radius: 10px;
+    }
+    & p {
+      color: #c7c7c7;
+    }
+  }
+}
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@import "../../../styles/mixins";
+
+.tour {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.tour-price-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background: #000;
+}
+
+.modal-user {
+  box-sizing: border-box;
+  margin: 0px;
+  min-width: 0px;
+  display: flex;
+  align-items: center;
+  padding: 8px 12px;
+  border-radius: 10px;
+  border: 1px solid #eeeeee;
+  background: #fff;
+
+  &-avatar {
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    margin-right: 16px;
+    flex: 0 0 auto;
+    overflow: hidden;
+    background-size: 100% 100%;
+  }
+
+  & p {
+    font-style: normal;
+    white-space: pre-wrap;
+    line-height: 170%;
+    font-size: 16px;
+  }
+}
+
+.modal-title {
+  & p {
+    font-style: normal;
+    white-space: pre-wrap;
+    line-height: 170%;
+    font-size: 16px;
+  }
+
+  & h1 {
+    font-size: 32px;
+    line-height: 43px;
+    letter-spacing: normal;
+    text-transform: none;
+  }
+}
